# Telegram-Drive-Android-App

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.gradle.kts  codemap.md  gradle.properties  gradlew  local.properties.template  settings.gradle.kts
.github/: BUILDING_VIA_CI.md
.github/workflows/: android.yml
.slim/: codemap.json
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
app/: build.gradle.kts  codemap.md  proguard-rules.pro
app/src/: codemap.md
app/src-tauri/: Cargo.toml  codemap.md  output.txt
app/src-tauri/src/: api_routes.rs  auto_backup.rs  bandwidth.rs  codemap.md  db.rs  lib.rs  server.rs  share_intent.rs  share_routes.rs  upload_service.rs  uri_test.rs  vpn_optimizer.rs
app/src-tauri/src/commands/: api_settings.rs  auth.rs  codemap.md  fs.rs  mod.rs  network.rs  preview.rs  settings.rs  sharing.rs  utils.rs
app/src-tauri/tests/: android_uri_cache_tests.rs  codemap.md
app/src/components/: codemap.md
app/src/components/desktop/: DesktopDashboard.tsx  codemap.md
app/src/context/: SettingsContext.tsx  codemap.md
app/src/contexts/: codemap.md
app/src/hooks/: codemap.md  useFileDownload.ts  useFileUpload.ts  useNetworkStatus.ts  usePlatform.ts
app/src/main/: AndroidManifest.xml
app/src/utils/: haptic.ts
crates/core/: Cargo.toml  build.rs  uniffi.toml
crates/core/src/: api_settings.rs  auth.rs  bandwidth.rs  db.rs  fs.rs  lib.rs  models.rs  network.rs  preview.rs  settings.rs  sharing.rs  telegram_drive.udl  telegram_state.rs  utils.rs  vpn_optimizer.rs
gradle/: libs.versions.toml
scripts/: build-tdlib-android.sh
(+119 files in other folders)
