[workspace]
members = [
    "crates/core",
    "app/src-tauri",
]
resolver = "2"

[workspace.dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "d07f96f", features = ["proxy"] }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "d07f96f", features = ["proxy"] }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
argon2 = "0.5.0"
sqlite = { version = "0.37.0", features = ["bundled"] }
